syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "generic.proto";

package users;

message User {
  string uid = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  string fullName = 5;
  string phone = 6;
  string email = 7;
}

message CreateRequest {
  User user = 1;
}
message UpdateRequest {
  User user = 1;
}

service Service {
  rpc Get (common.GenericRequest) returns (User) { }
  rpc Create (CreateRequest) returns (User) { }
  rpc Update (UpdateRequest) returns (User) { }
  rpc Delete (common.GenericRequest) returns (common.GenericResponse) { }
}